# hc-operator

./: Cargo.toml  Dockerfile  README.md  deployment.yaml  hc-test.yaml  operator.yaml
crd/: hc.yaml  healthcheck.crd.yaml
deployment/: operator.yaml
hc/: healthcheck.crd.yaml
rbac/: node-health-check-operator-rs-role.yaml  service-account.yaml
src/: actions.rs  api.rs  crd.rs  database.rs  hcapi.rs  healthcheck.rs  main.rs
