[package]
name = "hc-operator"
version = "0.1.0"
authors = ["Nathan LeSueur"]
edition = "2021"

[dependencies]
tokio = { version = "1.45", features = [
    "macros",
    "rt-multi-thread",
] }
kube = { version = "1.0.0", default-features = true, features = [
    "derive",
    "runtime",
] }
k8s-openapi = { version = "0.25.0", default-features = false, features = [
    "v1_33",
] }
futures = "0.3"
serde = "1"
serde_json = "1.0"
schemars = "0.8"
thiserror = "2" 
port_check = "0.3.0"
